Add support for Java 11 through 14 (fixes issue #314)